Mon May 14 14:56:21 2001  Owen Taylor  <otaylor@redhat.com>

	* tests/prop-editor.c: Block against redundant changes.

	* gtk/gtkpaned.c gtk/gtk[hv]paned.c: Add position, position_set
	properties.

Sun May 13 18:40:04 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkpixmap.h: Remove creative formatting.

Thu May 10 19:22:28 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktogglebutton.c:  Patch from John Margaglione converting to
	property API. (#51669)

	* gtk/gtkscale.c: Patch from John Margaglione converting to
	property API. (#51891)

	* gtk/gtkaccellabel.c: Applied patch from Lee Mallabone, converting
	to property API. (#50985)

Fri May 11 20:13:44 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c (gtk_main_do_event): remember widget's double
	buffering state across expose event, so we still call end_paint().

2001-05-11  Alexander Larsson  <alexl@redhat.com>

	* gtk/gtkhsv.c (paint_triangle):
	Expose the ring in the triangle at the correct place when
	exposing just a part of the triangle.

	* gtk/gtkwindow-decorate.c (gtk_decorated_window_focus_change):
	Return FALSE, or window focusing will not work.

2001-05-11  Havoc Pennington  <hp@pobox.com>

	* gtk/gtkimage.c (gtk_image_new_from_stock): docs, fixes bug
	#54144

	* gtk/gtkcolorsel.c (gtk_color_selection_new): docs, fixes
	bug #54330

Fri May 11 02:53:57 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtktogglebutton.c (gtk_toggle_button_expose): don't
	propagate exposes to NULL child.

	* gtk/gtkscrolledwindow.c (gtk_scrolled_window_adjustment_changed): guard
	against not having one of the scrollbars.

	* gtk/gtklabel.c (gtk_label_setup_mnemonic): clean up after us,
	we don't keep a mnemonic window if we have no mnemonic installed.

Fri May 11 01:05:00 2001  Tim Janik  <timj@gtk.org>

	* gtk/gtktypeutils.h: grum, gtk_type_class() is not GNUC_CONST
	it has the _important_ side effect of initializing a class.

2001-05-10  Alexander Larsson  <alexl@redhat.com>

	* gdk/linux-fb/gdkprivate-fb.h: